Fixed contrast

--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -429,7 +429,7 @@ margin-top: 50px;
 }
 .bg-search
 {
-    background-image: url("../images/Background/searchMoviesWallpaper.jpg");
+    background-image: url("../images/Background/batman2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0% 0%;
